k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-backend
  namespace: fintech
  labels:
    app: fintech-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fintech-backend
  template:
    metadata:
      labels:
        app: fintech-backend
    spec:
      containers:
        - name: backend
          image: sof777/unir:backend
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
              name: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
