k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-frontend
  namespace: fintech
  labels:
    app: fintech-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fintech-frontend
  template:
    metadata:
      labels:
        app: fintech-frontend
    spec:
      containers:
        - name: frontend
          image: sof777/unir:frontend-v3
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
---
# Despliegue del frontend. Reemplazar la imagen con la versión de producción construida.
