k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fintech-postgres
  namespace: fintech
  labels:
    app: fintech-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fintech-postgres
  template:
    metadata:
      labels:
        app: fintech-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: fintech-postgres-pvc-efs
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: fintech
  labels:
    app: fintech-postgres
spec:
  type: ClusterIP
  selector:
    app: fintech-postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
