k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: fintech
  labels:
    app: fintech-backend
spec:
  type: LoadBalancer
  selector:
    app: fintech-backend
  ports:
    - port: 3001
      targetPort: 3001
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: fintech
  labels:
    app: fintech-frontend
spec:
  type: LoadBalancer
  selector:
    app: fintech-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
---
